src/objects/Test_Case_Step__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_Position__c</fullName>
        <label>Step Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Case Step</label>
    <nameField>
        <displayFormat>TS-{000000000}</displayFormat>
        <label>Test Case Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>